# derive-error-kind

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
